--- a/styles/globals.css
+++ b/styles/globals.css
@@ -170,3 +170,25 @@
 body {
   letter-spacing: var(--tracking-normal);
 }
+
+.range-thumb::-webkit-slider-thumb {
+  appearance: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 9999px;
+  background: white;
+  border: 2px solid #6366f1;
+  cursor: pointer;
+  pointer-events: auto;
+  position: relative;
+}
+
+.range-thumb::-moz-range-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 9999px;
+  background: white;
+  border: 2px solid #6366f1;
+  cursor: pointer;
+  pointer-events: auto;
+}
